Fix screen flickering

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,6 @@ body {
 }
 
 .door {
-    background: #fafafa;
     box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.5) inset;
     width: 55px;
     height: 80px;
